--- a/index.html
+++ b/index.html
@@ -75,7 +75,14 @@
           </a>
           </div>
     </div>
-    
+    <div class="row justify-content-md-center" style= "margin:3vh;">
+      <div class="col md-4 text-center">
+        <a href="https://www.instagram.com/fego.arg/">
+          <button type="button" id ="boton" class="btn btn-outline-light btn-lg" style= "height: 7.5vh; width: 40vh;
+            font-size: 3.1vh; ">Instagram</button>
+        </a>
+        </div>
+  </div>
     
     <div class="row justify-content-md-center" style= "margin:3vh;">
         <div class="col md-4 text-center">
